syntax = "proto3";
option go_package = ".;pb";
package group;

message GroupRequest {
  string name = 1;
}

message GroupResponse {
  string message = 1;
}
